# visualea

./: .gitignore  ChangeLog.txt  README.md  appveyor.yml  metainfo.ini  pyproject.toml  setup.cfg  setup.py  travis.yml
.github/workflows/: conda-package-build.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  index.rst
doc/user/: autosum.rst  index.rst  manual.rst  references.rst  tutorials.rst
src/openalea/visualea/: code_editor.py  compositenode_widget.py  dialogs.py  gui_catalog.py  helpwidget.py  images_rc.py  lightsphinx.py  logger.py  mainwindow.py  metainfo.py  node_treeview.py  node_widget.py  provenance.py  scintilla_editor.py  splitterui.py  system_util.py  tooltip.py  ui_ioconfig.py  ui_listedit.py  ui_mainwindow.py  ui_newdata.py  ui_newgraph.py  ui_newpackage.py  ui_nodechooser.py  ui_preferences.py  ui_tableedit.py  ui_tofactory.py  util.py  version.py  visualea_script.py  visualeagui.py
src/openalea/visualea/dataflowview/: __init__.py  adapter.py  anno.py  edge.py  vertex.py
src/openalea/visualea/graph_operator/: __init__.py  base.py  color.py  compositenode_inspector.py  dataflow.py  layout.py  port.py  vertex.py
src/openalea/visualea/qt/: designer.py
src/openalea/visualea/resources/: mainwindow.ui  process_res.py
test/: test_helpwidget.py  test_widget_composite_node.py
test/dataflow/dataflow_test/: __wralea__.py
